# my_hw_e-commerce

./: pyproject.toml
src/: class_category.py  class_product.py
test/: test_class_category.py  test_class_product.py
tests/: test_class_category.py
